[package]
name = "esc_client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.8"
bevy_egui = "0.16.1"
egui = "0.19.0"
thiserror = "1.0.37"
esc_common = { path = "../esc_common" }
tokio = { version = "1.21.2", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
    "process",
] }
